Fixed spacing issue in project, and stopped over-scroll

--- a/src/index.css
+++ b/src/index.css
@@ -7,4 +7,5 @@ html {
 
 html, body {
   overflow-x: hidden;
+  overscroll-behavior: none;
 }
